# noway

./: Cargo.toml  LICENSE  README.md  devshell.nix  flake.nix
src/: main.rs  state.rs  winit.rs
src/backend/: mod.rs  winit.rs
src/compositor/: mod.rs  state.rs
src/compositor/wayland/handlers/: compositor.rs  data_device.rs  fractional_scale.rs  input_method.rs  kde.rs  keyboard_shortcuts_inhibit.rs  layer_shell.rs  mod.rs  output.rs  presentation.rs  primary_selection.rs  seat.rs  shm.rs  text_input.rs  viewporter.rs  virtual_keyboard.rs  xdg.rs
src/grabs/: mod.rs  move_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  data_device.rs  mod.rs  output.rs  seat.rs  shm.rs  xdg_shell.rs
src/render/: custom.rs  mod.rs  pointer.rs  window.rs
